RESOLVED FIXED317910
WebContent process termination due to MESSAGE_CHECK in WebProcessProxy::didPostMessage()
https://bugs.webkit.org/show_bug.cgi?id=317910
Summary WebContent process termination due to MESSAGE_CHECK in WebProcessProxy::didPo...
Chris Dumez
Reported 2026-06-26 00:43:52 PDT
WebContent process termination due to MESSAGE_CHECK in WebProcessProxy::didPostMessage()
Attachments
Chris Dumez
Comment 1 2026-06-26 00:43:58 PDT
Chris Dumez
Comment 2 2026-06-26 00:50:03 PDT
EWS
Comment 3 2026-06-26 09:54:06 PDT
Committed 315907@main (1abac9ea0f02): <https://commits.webkit.org/315907@main> Reviewed commits have been landed. Closing PR #67933 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.